# python-rust-arrow-interop-example

./: Cargo.toml  README.md  pyproject.toml  requirements.txt  run.py
src/: lib.rs
